--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/05_vanishing_and_exploding_gradients.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/05_vanishing_and_exploding_gradients.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMO7PT563cen8x3UqlA0/3k",
+      "authorship_tag": "ABX9TyPhpQPzj0ZGOicroVfeYDxS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,23 +39,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now, let's consider what is Transfer learning?\n",
+        "The gradients, together\n",
+        "with the learning rate, are what makes the model tick, or better yet, learn.\n",
+        "We always\n",
+        "assumed that the gradients were well behaved, as long as our learning rate was\n",
+        "sensible. \n",
         "\n",
-        "The idea is quite simple. First, some big tech company, which has access to virtually\n",
-        "infinite amounts of data and computing power, develops and trains a huge model\n",
-        "for their own purpose. \n",
+        "Unfortunately, this is not necessarily true, and sometimes the gradients\n",
+        "may go awry: They can either vanish or explode. Either way, we need to rein them\n",
+        "in, so let’s see how we can accomplish that.\n",
         "\n",
-        "Next, once it is trained, its architecture and the corresponding trained weights (the pre-trained model) are released. Finally,\n",
-        "everyone else can use these weights as a starting point and fine-tune them\n",
-        "further for a different (but similar) purpose.\n",
+        "Backpropagation works fine for\n",
+        "models with a few hidden layers, but as models grow deeper, the gradients\n",
+        "computed for the weights in the initial layers become smaller and smaller. That’s\n",
+        "the so-called vanishing gradients problem, and it has always been a major obstacle\n",
+        "for training deeper models.\n",
         "\n",
-        "That’s transfer learning in a nutshell.\n",
+        "If gradients vanish—that is, if they are close to zero—updating the weights will\n",
+        "barely change them. In other words, the model is not learning anything; it gets\n",
+        "stuck.\n",
         "\n",
-        "Now, we are aware of the necessary steps to use transfer learning\n",
-        "with pre-trained models for computer vision tasks: using ImageNet statistics for\n",
-        "pre-processing the inputs, freezing layers (or not), replacing the \"top\" layer, and\n",
-        "optionally speeding up training by generating features and training the \"top\" of\n",
-        "the model independently.\n",
+        "Why does it happen?\n",
         "\n"
       ],
       "metadata": {
@@ -74,36 +78,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from IPython.core.display import display, HTML\n",
-        "display(HTML(\"<style>.container { width:80% !important; }</style>\"))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "id": "sJOR-0hwlwr7",
-        "outputId": "25d73530-ada4-4f82-ccf0-ecd429049331"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<style>.container { width:80% !important; }</style>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "try:\n",
         "    import google.colab\n",
         "    import requests\n",
@@ -114,18 +88,18 @@
         "    pass\n",
         "\n",
         "from config import *\n",
-        "config_chapter7()\n",
+        "config_chapterextra()\n",
         "# This is needed to render the plots in this chapter\n",
-        "from plots.chapter7 import *"
+        "from plots.chapterextra import *"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wlXOl_Holz6M",
-        "outputId": "4cb1cc09-4196-4089-d2ac-0daf9c67b211"
+        "outputId": "a9d388e6-21cf-4683-b980-731d292a8a9e"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,108 +114,21 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "from PIL import Image\n",
-        "\n",
         "import torch\n",
         "import torch.optim as optim\n",
         "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
+        "from sklearn.datasets import make_regression\n",
         "\n",
-        "from torch.utils.data import DataLoader, Dataset, random_split, TensorDataset\n",
-        "from torchvision.transforms import Compose, ToTensor, Normalize, Resize, ToPILImage, CenterCrop, RandomResizedCrop\n",
-        "from torchvision.datasets import ImageFolder\n",
-        "from torchvision.models import alexnet, resnet18, inception_v3\n",
-        "#from torchvision.models.alexnet import model_urls\n",
-        "try:\n",
-        "  from torchvision.models.utils import load_state_dict_from_url\n",
-        "except ImportError:\n",
-        "  from torch.hub import load_state_dict_from_url\n",
-        "\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
         "from stepbystep.v3 import StepByStep\n",
-        "from data_generation.rps import download_rps"
+        "\n",
+        "from data_generation.ball import load_data"
       ],
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
-      ],
-      "metadata": {
-        "id": "0A-YvvDpDl-1",
-        "outputId": "dbf163c8-e95b-4950-ce4c-9762675701bc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "# content/gdrive/My Drive/Kaggle is the path where kaggle.json is  present in the Google Drive\n",
-        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/gdrive/MyDrive/kaggle-keys\""
-      ],
-      "metadata": {
-        "id": "iDxyNz9iEDxw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%shell\n",
-        "\n",
-        "# download dataset from kaggle> URL: https://www.kaggle.com/datasets/sanikamal/rock-paper-scissors-dataset\n",
-        "kaggle datasets download -d sanikamal/rock-paper-scissors-dataset\n",
-        "\n",
-        "unzip -qq rock-paper-scissors-dataset.zip\n",
-        "rm -rf rock-paper-scissors-dataset.zip"
-      ],
-      "metadata": {
-        "id": "imNthwCGdJTw",
-        "outputId": "550c2926-c071-40be-c9ff-aa06960811a3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading rock-paper-scissors-dataset.zip to /content\n",
-            " 97% 438M/452M [00:04<00:00, 100MB/s]\n",
-            "100% 452M/452M [00:04<00:00, 102MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -255,43 +142,9 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "def freeze_model(model):\n",
-        "  for parameter in model.parameters():\n",
-        "    parameter.requires_grad = False\n",
-        "\n",
-        "def preprocessed_dataset(model, loader, device=None):\n",
-        "  if device is None:\n",
-        "    device = next(model.parameters()).device\n",
-        "  \n",
-        "  features = None\n",
-        "  labels = None\n",
-        "\n",
-        "  for i, (x, y) in enumerate(loader):\n",
-        "    model.eval()\n",
-        "    x = x.to(device)\n",
-        "    output = model(x)\n",
-        "    if i == 0:\n",
-        "      features = output.detach().cpu()\n",
-        "      labels = y.cpu()\n",
-        "    else:\n",
-        "      features = torch.cat([features, output.detach().cpu()])\n",
-        "      labels = torch.cat([labels, y.cpu()])\n",
-        "\n",
-        "  dataset = TensorDataset(features, labels)\n",
-        "  return dataset"
-      ],
-      "metadata": {
-        "id": "zRrrEN1f4qu4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "## Data Preparation"
+        "## Ball Dataset"
       ],
       "metadata": {
         "id": "Z9Sqyzlxl-Wn"
@@ -300,24 +153,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The data preparation step will be a bit more demanding this time since we’ll be\n",
-        "standardizing the images.Besides, we can use the ImageFolder dataset now.\n",
+        "Let’s use a dataset of 1,000 random points drawn from a ten-dimensional ball such that each feature has zero mean and unit standard\n",
+        "deviation. \n",
         "\n",
-        "The Rock Paper Scissors dataset is organized like that:\n",
-        "\n",
-        "```\n",
-        "rps/paper/paper01-000.png\n",
-        "rps/paper/paper01-001.png\n",
-        "\n",
-        "rps/rock/rock01-000.png\n",
-        "rps/rock/rock01-001.png\n",
-        "\n",
-        "rps/scissors/scissors01-000.png\n",
-        "rps/scissors/scissors01-001.png\n",
-        "```\n",
-        "\n",
-        "The dataset is also perfectly balanced, with each sub-folder containing 840 images\n",
-        "of its particular class."
+        "In this dataset, points situated within half of the radius of the ball are\n",
+        "labeled as negative cases, while the remaining points are labeled positive cases."
       ],
       "metadata": {
         "id": "NMt6wXGPl_on"
@@ -326,57 +166,118 @@
     {
       "cell_type": "code",
       "source": [
-        "ROOT_FOLDER = \"Rock-Paper-Scissors\""
+        "X, y = load_data(n_points=1000, n_dims=10)"
       ],
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ball_dataset = TensorDataset(torch.as_tensor(X).float(), torch.as_tensor(y).float())\n",
+        "ball_loader = DataLoader(ball_dataset, batch_size=len(X))"
+      ],
+      "metadata": {
+        "id": "uLYCNOICACwv"
+      },
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Since we’re using a pre-trained model, we need to use the standardization\n",
-        "parameters used to train the original model. \n",
-        "\n",
-        "In other words, we need to use the\n",
-        "statistics of the original dataset used to train that model.\n",
-        "\n",
-        "So, the data preparation step for the Rock Paper Scissors dataset looks like this now:"
+        "##Block Model"
       ],
       "metadata": {
-        "id": "Zl4V53YwsCxk"
+        "id": "MOWbL1u6BwJN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To illustrate the vanishing gradients problem, we need a deeper model.\n",
+        "\n",
+        "Let’s call it the \"block\" model: It is a block of several hidden\n",
+        "layers (and activation functions) stacked together, every layer containing the same\n",
+        "number of hidden units (neurons)."
+      ],
+      "metadata": {
+        "id": "1pWMxzI7Bw4r"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "normalizer = Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
-        "composer = Compose([\n",
-        "  Resize(256),\n",
-        "  CenterCrop(224),\n",
-        "  ToTensor(),\n",
-        "  normalizer\n",
-        "])\n",
+        "torch.manual_seed(11)\n",
         "\n",
-        "train_data = ImageFolder(root=f\"{ROOT_FOLDER}/train\", transform=composer)\n",
-        "val_data = ImageFolder(root=f\"{ROOT_FOLDER}/test\", transform=composer)\n",
+        "n_layers = 5\n",
+        "n_features = X.shape[1]\n",
+        "hidden_units = 100\n",
+        "activation_fn = nn.ReLU\n",
         "\n",
-        "# Builds a loader of each set\n",
-        "train_loader = DataLoader(train_data, batch_size=16, shuffle=True)\n",
-        "val_loader = DataLoader(val_data, batch_size=16)"
+        "model = build_model(n_features, n_layers, hidden_units, activation_fn, use_bn=False)"
       ],
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": null,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model)"
+      ],
+      "metadata": {
+        "id": "fgMpzO1_Cdx1",
+        "outputId": "f296f2a4-81d8-44de-8b48-94e6fb16a4b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sequential(\n",
+            "  (h1): Linear(in_features=10, out_features=100, bias=True)\n",
+            "  (a1): ReLU()\n",
+            "  (h2): Linear(in_features=100, out_features=100, bias=True)\n",
+            "  (a2): ReLU()\n",
+            "  (h3): Linear(in_features=100, out_features=100, bias=True)\n",
+            "  (a3): ReLU()\n",
+            "  (h4): Linear(in_features=100, out_features=100, bias=True)\n",
+            "  (a4): ReLU()\n",
+            "  (h5): Linear(in_features=100, out_features=100, bias=True)\n",
+            "  (a5): ReLU()\n",
+            "  (o): Linear(in_features=100, out_features=1, bias=True)\n",
+            ")\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# We’re only missing a loss function and an optimizer\n",
+        "loss_fn = nn.BCEWithLogitsLoss()\n",
+        "optimizer = optim.SGD(model.parameters(), lr=1e-2)"
+      ],
+      "metadata": {
+        "id": "v8JKnoukC_Eo"
+      },
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##Fine-Tuning"
+        "##Weights, Activations, and Gradients"
       ],
       "metadata": {
         "id": "ia5v6-ebtp6D"
@@ -384,10 +285,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's use the smallest version of the `ResNet` model (`resnet18`) and either\n",
-        "fine-tune it or use it as a feature extractor only."
-      ],
+      "source": [],
       "metadata": {
         "id": "n_yi7LIptqsz"
       }
