--- a/inside-deep-learing/12-rnn-alternatives/01_torchtext_basic.ipynb
+++ b/inside-deep-learing/12-rnn-alternatives/01_torchtext_basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcu+SbOWDtDxMfKvBuwbrC",
+      "authorship_tag": "ABX9TyMFCA/+A/SAWBdNKvL0SbdQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,10 +139,23 @@
         "from idlmam import AttentionAvg, GeneralScore, DotScore, AdditiveAttentionScore, ApplyAttention, getMaskByFill"
       ],
       "metadata": {
-        "id": "_9xoD7-8EibG"
+        "id": "_9xoD7-8EibG",
+        "outputId": "284f3394-3d8b-4e62-e734-7167ed20ad32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 18,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-1-07d797895a22>:16: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+            "  from tqdm.autonotebook import tqdm\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -155,10 +168,23 @@
         "from IPython.display import Latex"
       ],
       "metadata": {
-        "id": "8U1JNhEmEkzG"
+        "id": "8U1JNhEmEkzG",
+        "outputId": "4e6e12aa-9d5a-4dad-a4bb-b9721792ba42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-2-024163930d81>:3: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+            "  set_matplotlib_formats('png', 'pdf')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -216,7 +242,7 @@
       "metadata": {
         "id": "_chm5G2Z3Eqs"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -226,12 +252,12 @@
       ],
       "metadata": {
         "id": "NymODd7xqoW7",
-        "outputId": "410be762-6591-41e4-d95a-edf58c7ab8a9",
+        "outputId": "ce46025e-95c7-48aa-87ec-95019d68bdc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,24 +281,112 @@
         "  counter.update(tokenizer(line))\n",
         "# create a vocab object, removing any word that didn't occur at least 10 times, \n",
         "# and add special vocab items for unkown, begining of sentance, end of sentance, and \"padding\"\n",
-        "vocab = vocab(counter, min_freq=10, specials=(\"<unk>\", \"<BOS>\", \"<EOS>\", \"<PAD>\"))"
+        "vocab = vocab(counter, min_freq=10, specials=(\"<unk>\", \"<BOS>\", \"<EOS>\", \"<PAD>\"))\n",
+        "vocab.set_default_index(vocab[\"<unk>\"])"
       ],
       "metadata": {
         "id": "e-hdDWUGq9tb"
       },
-      "execution_count": 19,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "Vocab?"
+        "len(vocab)"
+      ],
+      "metadata": {
+        "id": "u81fytNkPREF",
+        "outputId": "b73ea6cf-8ae1-4527-e9a0-2650a0c2b53b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20647"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def text_transform(x):\n",
+        "  # vocab acts like a dictionary, handls unkown tokens.\n",
+        "  # We can make it pre- and post-pend with the start and end markers, respectively.\n",
+        "  return [vocab[\"<BOS>\"]] + [vocab[token] for token in tokenizer(x)] + [vocab[\"<EOS>\"]]\n",
+        "\n",
+        "def label_transform(y):\n",
+        "  # labes are originally [1, 2, 3, 4] but we need them as [0, 1, 2, 3] \n",
+        "  return y - 1"
       ],
       "metadata": {
         "id": "NoeUZqd6QRjr"
       },
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset[0][1]"
+      ],
+      "metadata": {
+        "id": "SxbRlswBMKDr",
+        "outputId": "82eb3e61-cbaf-4fd6-b1fd-e528ace9bf5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"Wall St. Bears Claw Back Into the Black (Reuters) Reuters - Short-sellers, Wall Street's dwindling\\\\band of ultra-cynics, are seeing green again.\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's transform the first data point's text into a list of tokens\n",
+        "print(text_transform(train_dataset[0][1]))"
+      ],
+      "metadata": {
+        "id": "oISrxQN0JnkS",
+        "outputId": "807b2ad5-91c8-4336-cbb4-0bc33a80e875",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 14, 16, 0, 17, 4, 18, 19, 20, 0, 21, 0, 17, 22, 23, 24, 25, 6, 2]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
