--- a/inside-deep-learing/12-rnn-alternatives/01_average_embedding_and_adaptive_pooling.ipynb
+++ b/inside-deep-learing/12-rnn-alternatives/01_average_embedding_and_adaptive_pooling.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNrlyhH3b7etdFwNh8eTrcx",
+      "authorship_tag": "ABX9TyNRkClFLis9LZqs4OTG8rLO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Torch text basic"
+        "##Average Embedding and Adaptive Pooling"
       ],
       "metadata": {
         "id": "ldjKkwDE9r9p"
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "YTO1Pk4x24PP"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "nXiYSSxO707X"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "Bbs8SwBuguUa"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "_chm5G2Z3Eqs"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "e-hdDWUGq9tb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +277,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "NoeUZqd6QRjr"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
           "height": 52
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +352,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +384,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
       "metadata": {
         "id": "GpI1PcRxCCU-"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -433,7 +433,7 @@
       "metadata": {
         "id": "xmJZIwpDDpR1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "SFepy3kxNpqm"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -461,7 +461,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
       "metadata": {
         "id": "-e20StYsEEN9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -550,7 +550,7 @@
           "height": 466
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,7 +619,7 @@
       "metadata": {
         "id": "Sy6i9JXOR6uL"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -652,7 +652,7 @@
           "height": 466
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +692,7 @@
           "height": 466
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +782,7 @@
       "metadata": {
         "id": "gmLeK1aUaaWA"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -800,7 +800,7 @@
       "metadata": {
         "id": "7dDVl6r8c1cg"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -834,7 +834,7 @@
           "height": 466
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
