--- a/inside-deep-learing/12-rnn-alternatives/02_positional_embeddings.ipynb
+++ b/inside-deep-learing/12-rnn-alternatives/02_positional_embeddings.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM3wGcJW2TxXSyZdNdvSzk1",
+      "authorship_tag": "ABX9TyPowzvBZhB0/p+ijTp05Psh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,10 +84,37 @@
         "!wget https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py"
       ],
       "metadata": {
-        "id": "j8dfqZhAI7hK"
+        "id": "j8dfqZhAI7hK",
+        "outputId": "be75a8fe-aabc-46b7-9583-25d90d82a2d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-05-16 06:44:04--  https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/EdwardRaff/Inside-Deep-Learning/main/idlmam.py [following]\n",
+            "--2023-05-16 06:44:04--  https://raw.githubusercontent.com/EdwardRaff/Inside-Deep-Learning/main/idlmam.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 22064 (22K) [text/plain]\n",
+            "Saving to: ‘idlmam.py’\n",
+            "\n",
+            "idlmam.py           100%[===================>]  21.55K  --.-KB/s    in 0.001s  \n",
+            "\n",
+            "2023-05-16 06:44:04 (16.3 MB/s) - ‘idlmam.py’ saved [22064/22064]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -131,10 +158,23 @@
         "from idlmam import AttentionAvg, GeneralScore, DotScore, AdditiveAttentionScore #For attention mechanism use"
       ],
       "metadata": {
-        "id": "_9xoD7-8EibG"
+        "id": "_9xoD7-8EibG",
+        "outputId": "31fbfe8b-505b-47a1-f75b-5cfc80d3325b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-2-f07934bbd46a>:16: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+            "  from tqdm.autonotebook import tqdm\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -147,10 +187,23 @@
         "from IPython.display import Latex"
       ],
       "metadata": {
-        "id": "8U1JNhEmEkzG"
+        "id": "8U1JNhEmEkzG",
+        "outputId": "7edb7959-d257-440a-b83d-3f7dc1d2f9b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-3-024163930d81>:3: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+            "  set_matplotlib_formats('png', 'pdf')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -982,7 +1035,7 @@
           "height": 447
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,7 +1085,7 @@
           "height": 447
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1112,7 +1165,7 @@
           "height": 430
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1137,11 +1190,38 @@
         "the location from the data.\n",
         "\n",
         "This specific form of a positional encoding also has some nice mathematical properties\n",
-        "that make it easier for neural networks to learn."
+        "that make it easier for neural networks to learn.\n",
+        "\n",
+        "Now let’s define a new PyTorch Module\n",
+        "that applies this positional encoding for us."
       ],
       "metadata": {
         "id": "KedR7SeyLMY9"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class PositionalEncoding(nn.Module):\n",
+        "  def __init__(self, d_model, dropout=0.1, max_len=5000, batch_first=False):\n",
+        "    super(PositionalEncoding, self).__init__()\n",
+        "\n",
+        "    self.dropout = nn.Dropout(p=dropout)\n",
+        "    self.d_model = d_model\n",
+        "\n",
+        "    pe = torch.zeros(max_len, d_model)\n",
+        "    position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
+        "    div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
+        "    pe[:, 0::2] = torch.sin(position * div_term)\n",
+        "    pe[:, 1::2] = torch.cos(position * div_term)\n",
+        "\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "VNayOpt0TmlS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
