--- a/inside-deep-learing/12-rnn-alternatives/02_positional_embeddings.ipynb
+++ b/inside-deep-learing/12-rnn-alternatives/02_positional_embeddings.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPowzvBZhB0/p+ijTp05Psh",
+      "authorship_tag": "ABX9TyPjZpUcA8jin3KWs0h8s3IP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,40 +81,24 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install portalocker"
+      ],
+      "metadata": {
+        "id": "NSYrcRntqoat"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!wget https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py"
       ],
       "metadata": {
-        "id": "j8dfqZhAI7hK",
-        "outputId": "be75a8fe-aabc-46b7-9583-25d90d82a2d2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "j8dfqZhAI7hK"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-05-16 06:44:04--  https://github.com/EdwardRaff/Inside-Deep-Learning/raw/main/idlmam.py\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/EdwardRaff/Inside-Deep-Learning/main/idlmam.py [following]\n",
-            "--2023-05-16 06:44:04--  https://raw.githubusercontent.com/EdwardRaff/Inside-Deep-Learning/main/idlmam.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 22064 (22K) [text/plain]\n",
-            "Saving to: ‘idlmam.py’\n",
-            "\n",
-            "idlmam.py           100%[===================>]  21.55K  --.-KB/s    in 0.001s  \n",
-            "\n",
-            "2023-05-16 06:44:04 (16.3 MB/s) - ‘idlmam.py’ saved [22064/22064]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -159,7 +143,7 @@
       ],
       "metadata": {
         "id": "_9xoD7-8EibG",
-        "outputId": "31fbfe8b-505b-47a1-f75b-5cfc80d3325b",
+        "outputId": "cdc182bf-5787-4d58-953a-85c8e400efae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -188,7 +172,7 @@
       ],
       "metadata": {
         "id": "8U1JNhEmEkzG",
-        "outputId": "7edb7959-d257-440a-b83d-3f7dc1d2f9b3",
+        "outputId": "005f17ae-fee3-43d0-b174-7ad73129e334",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -422,23 +406,10 @@
         "epochs = 15"
       ],
       "metadata": {
-        "id": "jtko00QyrbC3",
-        "outputId": "c39a6784-64b6-49e4-9d15-373365d53af2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "jtko00QyrbC3"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Vocab: 20647\n",
-            "Num Classes: 4\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -499,34 +470,10 @@
         "batch1"
       ],
       "metadata": {
-        "id": "95iCCMT-OTdJ",
-        "outputId": "1104efd0-075d-4c7b-a78d-30c76573ff32",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "95iCCMT-OTdJ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(tensor([[    1,  7034,  9930,  ...,     3,     3,     3],\n",
-              "         [    1,   721,  1952,  ...,     3,     3,     3],\n",
-              "         [    1,  1814,  1104,  ...,     3,     3,     3],\n",
-              "         ...,\n",
-              "         [    1, 20355,  3099,  ...,     3,     3,     3],\n",
-              "         [    1,    11,   386,  ...,     3,     3,     3],\n",
-              "         [    1,     0,    17,  ...,     3,     3,     3]]),\n",
-              " tensor([1, 3, 3, 3, 1, 2, 0, 2, 1, 3, 3, 2, 2, 2, 2, 2, 0, 3, 1, 1, 3, 2, 3, 3,\n",
-              "         1, 1, 0, 2, 3, 3, 2, 3, 3, 2, 1, 0, 1, 3, 3, 1, 3, 1, 2, 1, 1, 3, 1, 2,\n",
-              "         3, 0, 1, 3, 1, 3, 1, 3, 0, 2, 3, 0, 1, 1, 3, 0]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1214,11 +1161,118 @@
         "    div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
         "    pe[:, 0::2] = torch.sin(position * div_term)\n",
         "    pe[:, 1::2] = torch.cos(position * div_term)\n",
+        "    pe = pe.unsqueeze(0).transpose(0, 1)\n",
+        "    # Done so that when we call .to(device), this array will move to it\n",
+        "    self.register_buffer(\"pe\", pe)\n",
+        "    self.batch_first = batch_first\n",
         "\n",
-        "    "
+        "  def forward(self, x):\n",
+        "    if self.batch_first:\n",
+        "      # this code works on (T, B, D) data, so we need to reorder if the input is (B, T, D).\n",
+        "      x = x.permute(1, 0, 2)\n",
+        "    # mixes the input and positional information\n",
+        "    x = x * np.sqrt(self.d_model) + self.pe[: x.size(0), :]\n",
+        "    # Regularizes to avoid overfitting\n",
+        "    x = self.dropout(x)\n",
+        "\n",
+        "    # now go back to (B, T, D) shape\n",
+        "    if self.batch_first:\n",
+        "      x = x.permute(1, 0, 2)\n",
+        "\n",
+        "    return x"
       ],
       "metadata": {
         "id": "VNayOpt0TmlS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "With our new positional encoding, we can redefine the simple averaging approach from\n",
+        "before by inserting our `PositionalEncoding` class directly after the `nn.Embedding` layer.\n",
+        "\n",
+        "It does not impact the tensor’s shape in any way, so everything else can remain the same."
+      ],
+      "metadata": {
+        "id": "B-HVXmVHjXfh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "simple_positional_embedding = nn.Sequential(\n",
+        "  nn.Embedding(VOCAB_SIZE, embed_dim, padding_idx=padding_idx),  # (B, T) -> (B, T, D) \n",
+        "  PositionalEncoding(embed_dim, batch_first=True),                     \n",
+        "\n",
+        "  # now we will pretend that D is the number of channels in this new interpreation of the data!\n",
+        "  nn.Linear(embed_dim, embed_dim),\n",
+        "  nn.LeakyReLU(),\n",
+        "\n",
+        "  nn.Linear(embed_dim, embed_dim),\n",
+        "  nn.LeakyReLU(),\n",
+        "\n",
+        "  nn.Linear(embed_dim, embed_dim),\n",
+        "  nn.LeakyReLU(),\n",
+        "\n",
+        "  # let's reduce to a fixed length!\n",
+        "  nn.AdaptiveAvgPool2d((1, None)), # (B, T, D) -> (B, 1, D)\n",
+        "\n",
+        "  nn.Flatten(),            # (B, 1, D) -> (B, D)\n",
+        "\n",
+        "  nn.Linear(embed_dim, embed_dim),\n",
+        "  nn.LeakyReLU(),\n",
+        "  nn.BatchNorm1d(embed_dim),\n",
+        "  nn.Linear(embed_dim, NUM_CLASS)\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "2pVCYf3QjcOY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's define the\n",
+        "positional encoding followed by three rounds of hidden layers."
+      ],
+      "metadata": {
+        "id": "t2epviMznqo-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedding_layers = nn.Sequential(\n",
+        "  *(\n",
+        "      [PositionalEncoding(embed_dim, batch_first=True)] + \n",
+        "      [nn.Sequential(nn.Linear(embed_dim, embed_dim), nn.LeakyReLU()) for _ in range(3)]\n",
+        "  )\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "qfKcimSUnvuD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, we can define an attention-based network with positional encoding."
+      ],
+      "metadata": {
+        "id": "z602YjhlooFS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bslbm7w1osP6"
       },
       "execution_count": null,
       "outputs": []
