--- a/inside-deep-learing/12-rnn-alternatives/02_positional_embeddings.ipynb
+++ b/inside-deep-learing/12-rnn-alternatives/02_positional_embeddings.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYrfWMYNaQN1eDhNJ4q/qk",
+      "authorship_tag": "ABX9TyMdkevGFFDBnfOs4tnwxnFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,10 +381,10 @@
       ],
       "metadata": {
         "id": "jtko00QyrbC3",
-        "outputId": "3f3d0d2a-1545-4b43-eaca-0d0c1b6dbf65",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3f3d0d2a-1545-4b43-eaca-0d0c1b6dbf65"
       },
       "execution_count": 15,
       "outputs": [
@@ -458,10 +458,10 @@
       ],
       "metadata": {
         "id": "95iCCMT-OTdJ",
-        "outputId": "1c36e29c-e892-4b64-a4ac-bfed6df34969",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1c36e29c-e892-4b64-a4ac-bfed6df34969"
       },
       "execution_count": 19,
       "outputs": [
@@ -1219,12 +1219,12 @@
         "sns.lineplot(x=\"total time\", y=\"val Accuracy\", data=attention_positional_embedding_results, label=\"Attention Positional Embedding\")"
       ],
       "metadata": {
-        "id": "D9gdwHTjo_df",
-        "outputId": "50b64933-893b-4168-b6d5-390ab6d1c33c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 466
-        }
+        },
+        "id": "D9gdwHTjo_df",
+        "outputId": "50b64933-893b-4168-b6d5-390ab6d1c33c"
       },
       "execution_count": 44,
       "outputs": [
@@ -1252,6 +1252,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Our positional embeddings provide a significant benefit, accuracy\n",
+        "is improved across the board, and there are less-severe dips in accuracy that indicate\n",
+        "less overfitting.\n",
+        "\n",
+        "These results provide evidence that our hypothesis about sequence order helping\n",
+        "prevent overfitting was also correct, particular with the attention-based approach. Both\n",
+        "versions using the positional encodings still fluctuate but do not drop in accuracy as\n",
+        "quickly with more epochs of training. This shows how we can use a completely different\n",
+        "kind of approach to encode sequence information into our models.\n",
+        "\n",
+        "Our attention-based embedding is definitely a better idea: let’s compare just that to\n",
+        "the earlier GRU results. With this combination, we begin to match or even outperform\n",
+        "the GRU-based RNN in terms of accuracy, and it is over twice as fast to train! A pretty\n",
+        "great combo."
+      ],
+      "metadata": {
+        "id": "RxFhxvVUxilI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "sns.lineplot(x=\"total time\", y=\"val Accuracy\", data=gru_results, label=\"GRU\")\n",
@@ -1259,12 +1281,12 @@
         "sns.lineplot(x=\"total time\", y=\"val Accuracy\", data=attention_positional_embedding_results, label=\"Attention Positional Embedding\")"
       ],
       "metadata": {
-        "id": "WYMQQlavp3Nb",
-        "outputId": "d316a477-3221-4de6-d925-9f979641fe91",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 466
-        }
+        },
+        "id": "WYMQQlavp3Nb",
+        "outputId": "d316a477-3221-4de6-d925-9f979641fe91"
       },
       "execution_count": 45,
       "outputs": [
@@ -1290,6 +1312,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The takeaway is that positional encodings are a cheap, fast, and effective way to encode\n",
+        "sequence information into our networks. \n",
+        "\n",
+        "Surprisingly, positional encodings were not\n",
+        "invented on their own but rather in conjunction with `Transformers`.\n",
+        "\n",
+        "So in most current deep learning, you won’t see a positional\n",
+        "encoding used outside of transformers, but I have found them widely useful beyond\n",
+        "transformers as a fast and easy way to endow a model with the concept of time/ordered\n",
+        "data."
+      ],
+      "metadata": {
+        "id": "mb3QjHZtx-Rw"
+      }
     }
   ]
 }
